rebinds + move layerrules to windowrules

--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -15,7 +15,7 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, #also, f4 key # dwindle
 bind = $mainMod, X, togglesplit, # dwindle
 bind = $mainMod, W, exec, $browser
-bind = $mainMod, T, exec, $clock
+bind = $mainMod, O, exec, $clock
 bind = $mainMod, E, exec, $editor
 bind = $mainMod, I, exec, $sysmonitor
 bind = $mainMod, Escape, exec, systemctl suspend
@@ -24,8 +24,8 @@ bind = $extraMod, A , exec, loginctl lock-session
 bind = $mainMod, PRINT, exec, $screenshot
 bind = $extraMod, PRINT, exec, $screenshot2
 bind = $mainMod, V, exec, $clipboard-copy
-bind = $extraMod, T, togglegroup
-bind = $extraMod, X, moveoutofgroup
+bind = $mainMod, T, togglegroup
+bind = $extraMod, T, moveoutofgroup
 bind = $mainMod, B, changegroupactive, f 
 bind = $mainMod, Z, changegroupactive, b
 bind = $extraMod, B, movegroupwindow, f
@@ -104,5 +104,3 @@ bind = L_ALT, h, resizeactive, -40 0
 bind = L_ALT, l, resizeactive, 40 0
 bind = L_ALT, k, resizeactive, 0 -40
 bind = L_ALT, j, resizeactive, 0 40
-
-
