--- a/.config/hypr/hyprland.conf.d/windowrules.conf
+++ b/.config/hypr/hyprland.conf.d/windowrules.conf
@@ -4,6 +4,12 @@
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+#layer rules
+layerrule = blur,launcher
+layerrule = dimaround, launcher
+layerrule = blur, notifications
+layerrule = ignorezero, notifications
+layerrule = blur, bar
 
 #all windows
 windowrulev2=suppressevent maximize, class:.* # You'll probably like this.
