the lastest waybarest update ffs

--- a/.config/hypr/hyprland.conf.d/windowrules.conf
+++ b/.config/hypr/hyprland.conf.d/windowrules.conf
@@ -10,6 +10,7 @@ layerrule = dimaround, launcher
 layerrule = blur, notifications
 layerrule = ignorezero, notifications
 layerrule = blur, bar
+layerrule = ignorezero, bar
 
 #all windows
 windowrulev2=suppressevent maximize, class:.* # You'll probably like this.
