--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -1,7 +1,7 @@
 # output=<not set>
 # font=monospace
 # dpi-aware=auto
-# prompt=> 
+ prompt=>
  icon-theme=Papirus-Dark
  icons-enabled=yes
 # fields=filename,name,generic
@@ -9,7 +9,7 @@
 # filter-desktop=no
 # fuzzy=yes
 # show-actions=no
- terminal=footclient  # Note: you cannot actually use environment variables here
+ terminal=footclient
 # launch-prefix=<not set>
 
 # lines=15
