add a layerrule to launcher

--- a/.config/hypr/hyprland.conf.d/windowrules.conf
+++ b/.config/hypr/hyprland.conf.d/windowrules.conf
@@ -6,6 +6,7 @@
 
 #layer rules
 layerrule = blur,launcher
+layerrule = ignorezero, launcher
 layerrule = dimaround, launcher
 layerrule = blur, notifications
 layerrule = ignorezero, notifications
