--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -26,9 +26,8 @@
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
 # pad=0x0                             # optionally append 'center'
+# resize-by-cells=yes
 # resize-delay-ms=100
-
-# notify=notify-send -a ${app-id} -i ${app-id} ${title} ${body}
 
 # bold-text-in-bright=no
 # word-delimiters=,│`|:"'()[]{}<>
@@ -47,6 +46,13 @@
 # command=
 # command-focused=no
 
+[desktop-notifications]
+# command=notify-send --wait --app-name ${app-id} --icon ${app-id} --category ${category} --urgency ${urgency} --expire-time ${expire-time} --hint STRING:image-path:${icon} --replace-id ${replace-id} ${action-argument} --print-id -- ${title} ${body}
+# command-action-argument=--action ${action-name}=${action-label}
+# close=""
+# inhibit-when-focused=yes
+
+
 [scrollback]
 # lines=1000
 # multiplier=3.0
@@ -62,9 +68,9 @@
 
 [cursor]
  style=underline
- unfocused-style=none
 # color=<inverse foreground/background>
  blink=yes
+# blink-rate=500
 # beam-thickness=1.5
 # underline-thickness=<font underline thickness>
 
@@ -212,8 +218,10 @@ search-start=Control+Shift+slash
 # \x03=Mod4+c  # Map Super+c -> Ctrl+c
 
 [mouse-bindings]
-# scrollback-up-mouse=BTN_BACK
-# scrollback-down-mouse=BTN_FORWARD
+# scrollback-up-mouse=BTN_WHEEL_BACK
+# scrollback-down-mouse=BTN_WHEEL_FORWARD
+# font-increase=Control+BTN_WHEEL_BACK
+# font-decrease=Control+BTN_WHEEL_FORWARD
 # selection-override-modifiers=Shift
 # primary-paste=BTN_MIDDLE
 # select-begin=BTN_LEFT
@@ -228,4 +236,4 @@ search-start=Control+Shift+slash
 # vim: ft=dosini
 
 [main]
-include=/usr/share/foot/themes/catppuccin
+include=/usr/share/foot/themes/catppuccin-mocha
