--- a/.config/swayimg/config
+++ b/.config/swayimg/config
@@ -22,14 +22,18 @@ mode = viewer
 position = parent
 # Window size (fullscreen/parent/image, or absolute size, e.g. 800,600)
 size = parent
+# Action performed by SIGUSR1 signal (same format as for key bindings)
+sigusr1 = reload
+# Action performed by SIGUSR2 signal (same format as for key bindings)
+sigusr2 = next_file
 
 ################################################################################
 # Viewer mode configuration
 ################################################################################
 [viewer]
-# Window background color (RGB/RGBA)
+# Window background color (RGBA)
 window = #00000000
-# Background for transparent images (grid/RGB/RGBA)
+# Background for transparent images (grid/RGBA)
 transparency = grid
 # Default image scale (optimal/fit/width/height/fill/real)
 scale = optimal
@@ -54,12 +58,16 @@ preload = 1
 size = 200
 # Use anti-aliasing for thumbnails (yes/no)
 antialiasing = no
-# Background color of the window (RGB/RGBA)
+# Background color of the window (RGBA)
 window = #00000000
-# Background color of the tile (RGB/RGBA)
-background = #202020
-# Background color of the selected tile (RGB/RGBA)
-select = #404040
+# Background color of the tile (RGBA)
+background = #202020ff
+# Background color of the selected tile (RGBA)
+select = #404040ff
+# Border color of the selected tile (RGBA)
+border = #000000ff
+# Shadow color of the selected tile (RGBA)
+shadow = #000000ff
 
 ################################################################################
 # Image list configuration
@@ -82,9 +90,9 @@ all = yes
 name = monospace
 # Font size (pt)
 size = 14
-# Font color (RGB/RGBA)
-color = #cccccc
-# Shadow color (RGB/RGBA)
+# Font color (RGBA)
+color = #ccccccff
+# Shadow color (RGBA)
 shadow = #000000a0
 
 ################################################################################
@@ -165,14 +173,14 @@ Shift+m = flip_horizontal
 a = antialiasing
 r = reload
 i = info
-e = exec echo "Image: %"
+Shift+Delete = exec rm "%"; skip_file
 Escape = exit
 q = exit
 # Mouse related
 ScrollLeft = step_right 5
 ScrollRight = step_left 5
-ScrollUp = step_down 5
-ScrollDown = step_up 5
+ScrollUp = step_up 5
+ScrollDown = step_down 5
 Ctrl+ScrollUp = zoom +10
 Ctrl+ScrollDown = zoom -10
 Shift+ScrollUp = prev_file
@@ -184,6 +192,8 @@ Alt+ScrollDown = next_frame
 # Gallery mode key binding configuration: key = action [parameters]
 ################################################################################
 [keys.gallery]
+F1 = help
+? = help
 Home = first_file
 g = first_file
 End = last_file
@@ -196,13 +206,16 @@ Up = step_up
 k = step_up
 Down = step_down
 j = step_down
+Prior = page_up
+Next = page_down
 c = skip_file
 f = fullscreen
 Return = mode
 a = antialiasing
 r = reload
 i = info
-e = exec echo "Image: %"
+Shift+Delete = exec rm "%"; skip_file
+Shift+x = exec rm "%"; skip_file
 Escape = exit
 q = exit
 # Mouse related
