--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -13,7 +13,7 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = $HOME/.wallpaper
+    path = $HOME/.lock
     blur_passes = 0
     color = $base
 }
@@ -42,19 +42,6 @@ label {
     valign = top
 }
 
-# USER AVATAR
-
-image {
-    monitor = 
-    path = $HOME/.face
-    size = 100
-    border_color = $accent
-
-    position = 0, 75
-    halign = center
-    valign = center
-}
-
 # INPUT FIELD
 input-field {
     monitor =
@@ -73,7 +60,7 @@ input-field {
     fail_color = $red
     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
     capslock_color = $yellow
-    position = 0, -35
+    position = 0, 0
     halign = center
     valign = center
 }
