--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -13,9 +13,15 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = $HOME/.lock
-    blur_passes = 0
+    path = screenshot
     color = $base
+    blur_size = 5
+    blur_passes = 4 
+    noise = 0.0117
+    contrast = 1.3000 
+    brightness = 0.8000
+    vibrancy = 0.2100
+    vibrancy_darkness = 0.4
 }
 
 # TIME
