--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -13,9 +13,9 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = screenshot
+    path = $HOME/.local/share/lock.png
     color = $base
-    blur_size = 5
+    blur_size = 3
     blur_passes = 4 
     noise = 0.0117
     contrast = 1.3000 
