--- a/.config/hypr/hyprland.conf.d/env.conf
+++ b/.config/hypr/hyprland.conf.d/env.conf
@@ -10,6 +10,8 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 
 #cursor
+env = XCURSOR_THEME,catppuccin-mocha-dark-cursors
+env = XCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,catppuccin-mocha-dark
 env = HYPRCURSOR_SIZE,24
 
