disable qt xwayland support, edit a windowrule description

--- a/.config/hypr/hyprland.conf.d/windowrules.conf
+++ b/.config/hypr/hyprland.conf.d/windowrules.conf
@@ -16,7 +16,7 @@ layerrule = ignorezero, bar
 #all windows
 windowrulev2=suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2=idleinhibit fullscreen, fullscreen:1 #do not idleinhibit if there's a fullscreen window
-windowrulev2=dimaround, floating:1 #force focus on a last opened floating app and dim the screen around it
+windowrulev2=dimaround, floating:1 #force focus on a last opened floating window and dim the screen around it
 
 #single rule windows
 windowrulev2=nodim,title:(tty-clock)$ #never dim tty-clock terminal window
