--- a/.config/hypr/hyprland.conf.d/env.conf
+++ b/.config/hypr/hyprland.conf.d/env.conf
@@ -20,7 +20,7 @@ env = GDK_BACKEND,wayland
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
 env = _JAVA_AWT_WM_NONREPARENTING,1
-env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORM,wayland
 env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
 env = EGL_PLATFORM, wayland
