move aur src to .local to match LFS

--- a/.config/pacman/makepkg.conf
+++ b/.config/pacman/makepkg.conf
@@ -95,6 +95,7 @@ BUILDENV=(!distcc color !ccache check !sign)
 #-- purge:      Remove files specified by PURGE_TARGETS
 #-- debug:      Add debugging flags as specified in DEBUG_* variables
 #-- lto:        Add compile flags for building with link time optimization
+#-- autodeps:   Automatically add depends/provides
 #
 OPTIONS=(strip docs !libtool !staticlibs emptydirs zipman purge !debug lto)
 
@@ -126,7 +127,7 @@ LIB_DIRS=('lib:usr/lib' 'lib32:usr/lib32')
 #-- Destination: specify a fixed directory where all packages will be placed
 PKGDEST=$HOME/.cache/pacman/pkg/
 #-- Source cache: specify a fixed directory where source files will be cached
-SRCDEST=$HOME/.cache/pacman/src/
+SRCDEST=$HOME/.local/src/
 #-- Source packages: specify a fixed directory where all src packages will be placed
 SRCPKGDEST=$HOME/.cache/pacman/pkgsrc/
 #-- Log files: specify a fixed directory where all log files will be placed
