--- a/.config/pacman/makepkg.conf
+++ b/.config/pacman/makepkg.conf
@@ -129,7 +129,7 @@ PKGDEST=$HOME/.cache/pacman/pkg/
 #-- Source cache: specify a fixed directory where source files will be cached
 SRCDEST=$HOME/.local/src/
 #-- Source packages: specify a fixed directory where all src packages will be placed
-SRCPKGDEST=$HOME/.cache/pacman/pkgsrc/
+SRCPKGDEST=$HOME/.cache/pacman/srcpkg/
 #-- Log files: specify a fixed directory where all log files will be placed
 LOGDEST=$HOME/.cache/pacman/log/
 #-- Packager: name/email of the person or organization building packages
