--- a/.config/hypr/hyprland.conf.d/env.conf
+++ b/.config/hypr/hyprland.conf.d/env.conf
@@ -15,13 +15,15 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_THEME,catppuccin-mocha-dark
 env = HYPRCURSOR_SIZE,24
 
-#other vars
+#forcing everything to run on native wayland
 env = GDK_BACKEND,wayland
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
-env = _JAVA_AWT_WM_NONREPARENTING,1
 env = QT_QPA_PLATFORM,wayland
-env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
 env = EGL_PLATFORM,wayland
-env = ELECTRON_OZONE_PLATFORM_HINT,auto 
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland 
+
+#other vars
+env = QT_QPA_PLATFORMTHEME,qt6ct
+env = _JAVA_AWT_WM_NONREPARENTING,1
