--- a/.config/hypr/hyprland.conf.d/windowrules.conf
+++ b/.config/hypr/hyprland.conf.d/windowrules.conf
@@ -18,6 +18,12 @@ windowrulev2=suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2=idleinhibit fullscreen, fullscreen:1 #do not idleinhibit if there's a fullscreen window
 windowrulev2=dimaround, floating:1 #force focus on a last opened floating window and dim the screen around it
 
+
+#flatpak - Meteo app
+windowrulev2=float,class:(com.gitlab.bitseater.meteo)$
+windowrulev2=size 950 600,class:(com.gitlab.bitseater.meteo)$
+windowrulev2=center,class:(com.gitlab.bitseater.meteo)$
+
 #single rule windows
 windowrulev2=nodim,title:(tty-clock)$ #never dim tty-clock terminal window
 windowrulev2=float,class:(ymuse)$ #flatpak Ymuse app
