--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -14,3 +14,4 @@ $portals = sleep 1; killall xdg-desktop-portal-hyprland & killall xdg-desktop-po
 $mpd_notify = killall -e mpd-notification & sleep 2; mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
 $clipboard = wl-paste --watch cliphist store
 $clipboard-copy = cliphist list | fuzzel -d | cliphist decode | wl-copy
+$weather = flatpak run com.gitlab.bitseater.meteo
