make xf86 keys better

--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -33,18 +33,18 @@ bind = $mainMod, C, cyclenext
 bind = $extraMod, C, cyclenext, prev
 
 #mpd-mpc remote control
-bind = ,XF86AudioNext, exec, mpc next
-bind = ,XF86AudioPrev, exec, mpc prev
-bind = ,XF86AudioPlay, exec, mpc toggle
+bindl = ,XF86AudioNext, exec, mpc next
+bindl = ,XF86AudioPrev, exec, mpc prev
+bindl = ,XF86AudioPlay, exec, mpc toggle
 
 #brightnessctl
-bind = ,XF86MonBrightnessUp, exec, brightnessctl set +10%
-bind = ,XF86MonBrightnessDown, exec, brightnessctl set 10%-
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl set +10%
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl set 10%-
 
 #wireplumber - volume control
-bind = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_SINK@ 0.05+
-bind = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_SINK@ 0.05-
-bind = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_SINK@ 0.05+
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_SINK@ 0.05-
+bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_SINK@ toggle
 
 # Move focus with mainMod
 bind = $mainMod, H, movefocus, l
