--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -1,17 +1,27 @@
 # output=<not set>
 # font=monospace
 # dpi-aware=auto
+# use-bold=no
  prompt=>
+# placeholder=
  icon-theme=Papirus-Dark
  icons-enabled=yes
 # fields=filename,name,generic
 # password-character=*
 # filter-desktop=no
-# fuzzy=yes
+# match-mode=fzf
+# sort-result=yes
+# match-counter=no
+# delayed-filter-ms=300
+# delayed-filter-limit=20000
 # show-actions=no
  terminal=footclient
 # launch-prefix=<not set>
+# list-executables-in-path=no
 
+# anchor=center
+# x-margin=0
+# y-margin=0
 # lines=15
 # width=30
 # tabs=8
@@ -24,17 +34,25 @@
 # line-height=<use font metrics>
 # letter-spacing=0
 
-# layer = top
-# exit-on-keyboard-focus-loss = yes
+# layer=overlay
+# exit-on-keyboard-focus-loss=yes
 
-#catpuccin-mocha
+# cache=<not set>
+
+# render-workers=<number of logical CPUs>
+# match-workers=<number of logical CPUs>
+
 [colors]
 background=1e1e2eb3
 text=cdd6f4ff
+prompt=cdd6f4ff
+placeholder=cdd6f4ff
+input=cdd6f4ff
 match=f38ba8ff
 selection=585b70ff
-selection-match=f38ba8ff
 selection-text=cdd6f4ff
+selection-match=f38ba8ff
+counter=cdd6f4ff
 border=b4befeff
 
 [border]
@@ -46,7 +64,7 @@ border=b4befeff
 # exit-immediately-if-empty=no
 
 [key-bindings]
-# cancel=Escape Control+g
+# cancel=Escape Control+g Control+c Control+bracketleft
 # execute=Return KP_Enter Control+y
 # execute-or-next=Tab
 # execute-input=Shift+Return Shift+KP_Enter
@@ -56,8 +74,8 @@ border=b4befeff
 # cursor-right-word=Control+Right Mod1+f
 # cursor-home=Home Control+a
 # cursor-end=End Control+e
-# delete-prev=BackSpace
-# delete-prev-word=Mod1+BackSpace Control+BackSpace
+# delete-prev=BackSpace Control+h
+# delete-prev-word=Mod1+BackSpace Control+BackSpace Control+w
 # delete-line-backward=Control+u
 # delete-next=Delete KP_Delete Control+d
 # delete-next-word=Mod1+d Control+Delete Control+KP_Delete
@@ -68,6 +86,9 @@ border=b4befeff
 # next=Down Control+n
 # next-with-wrap=none
 # next-page=Page_Down KP_Page_Down
+# expunge=Shift+Delete
+# clipboard-paste=Control+v XF86Paste
+# primary-paste=Shift+Insert Shift+KP_Insert
 
 # custom-N: *dmenu mode only*. Like execute, but with a non-zero
 # exit-code; custom-1 exits with code 10, custom-2 with 11, custom-3
