update disk module icon

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -131,7 +131,7 @@
 
 "disk": {
     "interval": 5,
-    "format": "  📂 {percentage_used}%  ",
+    "format": "  {percentage_used}%",
     "path": "/"
 },
     "backlight": {
