--- a/.config/pacman/makepkg.conf
+++ b/.config/pacman/makepkg.conf
@@ -48,13 +48,11 @@ CXXFLAGS="$CFLAGS -Wp,-D_GLIBCXX_ASSERTIONS"
 LDFLAGS="-Wl,-O1 -Wl,--sort-common -Wl,--as-needed -Wl,-z,relro -Wl,-z,now \
          -Wl,-z,pack-relative-relocs"
 LTOFLAGS="-flto=auto"
-RUSTFLAGS="-Cforce-frame-pointers=yes"
 #-- Make Flags: change this for DistCC/SMP systems
 #MAKEFLAGS="-j2"
 #-- Debugging flags
 DEBUG_CFLAGS="-g"
 DEBUG_CXXFLAGS="$DEBUG_CFLAGS"
-DEBUG_RUSTFLAGS="-C debuginfo=2"
 
 #########################################################################
 # BUILD ENVIRONMENT
@@ -129,7 +127,7 @@ PKGDEST=$HOME/.cache/pacman/pkg/
 #-- Source cache: specify a fixed directory where source files will be cached
 SRCDEST=$HOME/.local/src/
 #-- Source packages: specify a fixed directory where all src packages will be placed
-SRCPKGDEST=$HOME/.cache/pacman/srcpkg/
+SRCPKGDEST=$HOME/.cache/pacman/pkgsrc/
 #-- Log files: specify a fixed directory where all log files will be placed
 LOGDEST=$HOME/.cache/pacman/log/
 #-- Packager: name/email of the person or organization building packages
@@ -144,7 +142,7 @@ PACKAGER="$USER <local@arch.com>"
 COMPRESSGZ=(gzip -c -f -n)
 COMPRESSBZ2=(bzip2 -c -f)
 COMPRESSXZ=(xz -c -z -)
-COMPRESSZST=(zstd -c -T0 --ultra -20 -)
+COMPRESSZST=(zstd -c -T0 -)
 COMPRESSLRZ=(lrzip -q)
 COMPRESSLZO=(lzop -q)
 COMPRESSZ=(compress -c -f)
