--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -7,10 +7,11 @@ $sysmonitor = $term -T htop  htop
 $browser = flatpak run org.mozilla.firefox
 $screenshot = grim
 $screenshot2 = slurp | grim -g - $HOME/Pictures/slurp_screenshot.png
+$wallpaper = swww-daemon
 $telegram = flatpak run org.telegram.desktop
 $easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
 $polkit = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 $portals = sleep 1; killall xdg-desktop-portal-hyprland & killall xdg-desktop-portal & sleep 1; /usr/lib/xdg-desktop-portal-hyprland & sleep 2; /usr/lib/xdg-desktop-portal
-$mpd_notify = killall -e mpd-notification & sleep 2; mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
+$mpd = mpd & killall -e mpd-notification & sleep 2; mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
 $clipboard = wl-paste --watch cliphist store
 $clipboard-copy = cliphist list | fuzzel -d | cliphist decode | wl-copy
