add a new windowrule for xwayland something

--- a/.config/hypr/hyprland.conf.d/windowrules.conf
+++ b/.config/hypr/hyprland.conf.d/windowrules.conf
@@ -15,6 +15,7 @@ layerrule = ignorezero, bar
 
 #all windows
 windowrulev2=suppressevent maximize, class:.* # You'll probably like this.
+windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0 #Fix some dragging issues with XWayland
 windowrulev2=idleinhibit fullscreen, fullscreen:1 #do not idleinhibit if there's a fullscreen window
 windowrulev2=dimaround, floating:1 #force focus on a last opened floating window and dim the screen around it
 
