--- a/.config/hypr/hyprland.conf.d/windowrules.conf
+++ b/.config/hypr/hyprland.conf.d/windowrules.conf
@@ -15,7 +15,7 @@ layerrule = ignorezero, bar
 
 #all windows
 windowrulev2=suppressevent maximize, class:.* # You'll probably like this.
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0 #Fix some dragging issues with XWayland
+windowrulev2=nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0 #Fix some dragging issues with XWayland
 windowrulev2=idleinhibit fullscreen, fullscreen:1 #do not idleinhibit if there's a fullscreen window
 windowrulev2=dimaround, floating:1 #force focus on a last opened floating window and dim the screen around it
 
@@ -26,11 +26,13 @@ windowrulev2=nodim,title:(tty-clock)$ #never dim tty-clock terminal window
 windowrulev2=float,class:(net.davidotek.pupgui2)$
 windowrulev2=size 600 600,  class:(net.davidotek.pupgui2)$
 windowrulev2=center, class:(net.davidotek.pupgui2)$
+windowrulev2=group deny, class:(net.davidotek.pupgui2)$
 
 #bluetoothctl, if launched by clicking on waybar bluetooth module
 windowrulev2=float,title:(bluetooth control)$
 windowrulev2=size 800 800,title:(bluetooth control)$
-windowrulev2=center,title:(bluetooth control)$
+windowrulev2=center, title:(bluetooth control)$
+windowrulev2=group deny, title:(bluetooth control)$
 
 #nnn preview-tui plugin
 windowrulev2=nofocus, title:(preview-tui)$ 
@@ -39,9 +41,11 @@ windowrulev2=group deny, title:(preview-tui)$
 
 #xdg-desktop-portal-gtk
 windowrulev2=float, class:(xdg-desktop-portal-gtk)$
-windowrulev2=size 800 600,  class:(xdg-desktop-portal-gtk)$
+windowrulev2=size 800 600, class:(xdg-desktop-portal-gtk)$
+windowrulev2=group deny, class:(xdg-desktop-portal-gtk)$
 
 #htop
 windowrulev2=float, title:(htop)$
 windowrulev2=size 1400 800, title:(htop)$
 windowrulev2=center,title:(htop)$
+windowrulev2=group deny, title:(htop)$
