--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,7 +13,10 @@ general {
     border_size = 1
     col.active_border = rgba($blueAlphaee) rgba($sapphireAlphaee) 45deg
     col.inactive_border = rgba($baseAlphaaa)
+    col.nogroup_border_active = rgba($mauveAlphaee)
+    col.nogroup_border = rgba($crustAlphaaa)
     layout = dwindle
+    resize_on_border = true
 
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -23,14 +26,18 @@ group {
 
     col.border_active = rgba($pinkAlphaee) rgba($tealAlphaee) 45deg
     col.border_inactive = rgba($baseAlphaaa)
+    col.border_locked_active = rgba($redAlphaee) rgba($peachAlphaee) 45deg
+    col.border_locked_inactive = rgba($crustAlphaaa)
+
 
 groupbar {
 
-    font_size = 11
+    font_size = 12
     text_color= rgba($textAlphaee)
     col.active = rgba($overlay0Alphaee)
     col.inactive = rgba($baseAlphaee)
-
+    col.locked_active = rgba($overlay2Alphaee)
+    col.locked_inactive = rgba($crustAlphaee)
 }
 
 }
@@ -93,6 +100,8 @@ master {
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    font_family = Fira Code
+    mouse_move_enables_dpms = true
 }
 
 #source
