--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -24,7 +24,8 @@ bind = $mainMod, PRINT, exec, $screenshot
 bind = $extraMod, PRINT, exec, $screenshot2
 bind = $mainMod, V, exec, $clipboard-copy
 bind = $mainMod, T, togglegroup
-bind = $extraMod, T, moveoutofgroup
+bind = $extraMod, T, lockactivegroup, toggle
+bind = ALT, T, moveoutofgroup
 bind = $mainMod, B, changegroupactive, f 
 bind = $mainMod, Z, changegroupactive, b
 bind = $extraMod, B, movegroupwindow, f
