make a group bar bigger

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -33,7 +33,8 @@ group {
 groupbar {
 
     font_size = 12
-    text_color= rgba($textAlphaee)
+    text_color = rgba($textAlphaee)
+    height = 16
     col.active = rgba($overlay0Alphaee)
     col.inactive = rgba($baseAlphaee)
     col.locked_active = rgba($overlay2Alphaee)
