--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -15,3 +15,5 @@ $portals = sleep 1; killall xdg-desktop-portal-hyprland & killall xdg-desktop-po
 $mpd = mpd & killall -e mpd-notification & sleep 2; mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
 $clipboard = wl-paste --watch cliphist store
 $clipboard-copy = cliphist list | fuzzel -d | cliphist decode | wl-copy
+$notification-action = makoctl menu fuzzel --dmenu -p 'Select Action: '
+$notification-dismiss = makoctl dismiss --all
