--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -19,7 +19,7 @@ bind = $mainMod, E, exec, $editor
 bind = $mainMod, I, exec, $sysmonitor
 bind = $mainMod, Escape, exec, systemctl suspend
 bind = $extraMod, Escape, exec, systemctl reboot
-bind = $extraMod, A , exec, loginctl lock-session
+bind = ALT, Q , exec, loginctl lock-session
 bind = $mainMod, PRINT, exec, $screenshot
 bind = $extraMod, PRINT, exec, $screenshot2
 bind = $mainMod, V, exec, $clipboard-copy
@@ -30,6 +30,8 @@ bind = $mainMod, B, changegroupactive, f
 bind = $mainMod, Z, changegroupactive, b
 bind = $extraMod, B, movegroupwindow, f
 bind = $extraMod, Z, movegroupwindow, b
+bind = $mainMod, A, exec, $notification-action
+bind = $extraMod, A, exec, $notification-dismiss
 bind = $mainMod, C, cyclenext
 bind = $extraMod, C, cyclenext, prev
 
