--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -30,8 +30,8 @@ bind = $mainMod, B, changegroupactive, f
 bind = $mainMod, Z, changegroupactive, b
 bind = $extraMod, B, movegroupwindow, f
 bind = $extraMod, Z, movegroupwindow, b
-bind = $mainMod, A, exec, $notification-action
-bind = $extraMod, A, exec, $notification-dismiss
+bind = $extraMod, A, exec, $notification-action
+bind = $mainMod, A, exec, $notification-dismiss
 bind = $mainMod, C, cyclenext
 bind = $extraMod, C, cyclenext, prev
 
