--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -1,6 +1,7 @@
 $term = footclient
 $filemanager = $term -T nnn  $HOME/.local/bin/nwrap
 $menu = fuzzel
+$dmenu = fuzzel --dmenu -p
 $clock = $term -T tty-clock tty-clock -C3 -c -s -n -f "%A %d %B %Y (%Z)"
 $editor = $term -T neovim  nvim
 $sysmonitor = $term -T htop  htop
@@ -14,6 +15,6 @@ $polkit = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 $portals = sleep 1; killall xdg-desktop-portal-hyprland & killall xdg-desktop-portal & sleep 1; /usr/lib/xdg-desktop-portal-hyprland & sleep 2; /usr/lib/xdg-desktop-portal
 $mpd = mpd & killall -e mpd-notification & sleep 2; mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
 $clipboard = wl-paste --watch cliphist store
-$clipboard-copy = cliphist list | fuzzel -d | cliphist decode | wl-copy
-$notification-action = makoctl menu fuzzel --dmenu -p 'Select Action: '
+$clipboard-copy = cliphist list | $dmenu 'Clipboard: ' | cliphist decode | wl-copy
+$notification-action = makoctl menu $dmenu 'Select Action: '
 $notification-dismiss = makoctl dismiss --all
