--- a/.config/mako/config
+++ b/.config/mako/config
@@ -16,7 +16,7 @@ background-color=#1e1e2eb3
 text-color=#cdd6f4
 border-color=#89b4fa
 progress-color=over #313244
-on-button-middle=exec makoctl menu fuzzel --dmenu -p 'Select Action: '
+on-button-middle=exec makoctl menu fuzzel --dmenu -p 'action >'
 
 [urgency=high]
 border-color=#fab387
