--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -15,6 +15,6 @@ $polkit = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 $portals = sleep 1; killall xdg-desktop-portal-hyprland & killall xdg-desktop-portal & sleep 1; /usr/lib/xdg-desktop-portal-hyprland & sleep 2; /usr/lib/xdg-desktop-portal
 $mpd = mpd & killall -e mpd-notification & sleep 2; mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
 $clipboard = wl-paste --watch cliphist store
-$clipboard-copy = cliphist list | $dmenu 'Clipboard: ' | cliphist decode | wl-copy
-$notification-action = makoctl menu $dmenu 'Select Action: '
+$clipboard-copy = cliphist list | $dmenu 'cliphist >' | cliphist decode | wl-copy
+$notification-action = makoctl menu $dmenu 'action >'
 $notification-dismiss = makoctl dismiss --all
