--- a/.config/swayimg/config
+++ b/.config/swayimg/config
@@ -10,7 +10,7 @@
 
 # Any of these options can be overridden using the --config argument
 # on the command line, for instance:
-# $ swayimg --config="general.scale=real"
+# $ swayimg --config="general.mode=gallery"
 
 ################################################################################
 # General configuration
@@ -34,7 +34,7 @@ app_id = swayimg
 ################################################################################
 [viewer]
 # Window background color (RGBA)
-window = #00000000
+window = #1e1e2ecc
 # Background for transparent images (grid/RGBA)
 transparency = grid
 # Default image scale (optimal/fit/width/height/fill/real)
@@ -65,21 +65,21 @@ fill = yes
 # Use anti-aliasing for thumbnails (yes/no)
 antialiasing = no
 # Background color of the window (RGBA)
-window = #00000000
+window = #1e1e2ecc
 # Background color of the tile (RGBA)
 background = #202020ff
 # Background color of the selected tile (RGBA)
-select = #404040ff
+select = #181825ff
 # Border color of the selected tile (RGBA)
-border = #000000ff
+border = #89b4faff
 # Shadow color of the selected tile (RGBA)
-shadow = #000000ff
+shadow = #11111bff
 
 ################################################################################
 # Image list configuration
 ################################################################################
 [list]
-# Default order (none/alpha/random)
+# Default order (none/alpha/reverse/random)
 order = alpha
 # Looping list of images (yes/no)
 loop = yes
@@ -97,9 +97,9 @@ name = monospace
 # Font size (pt)
 size = 14
 # Font color (RGBA)
-color = #ccccccff
+color = #cdd6f4ff
 # Shadow color (RGBA)
-shadow = #000000a0
+shadow = #11111ba0
 
 ################################################################################
 # Image meta info scheme (format, size, EXIF, etc)
