add hyprpaper and update hyprlock

--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -8,7 +8,7 @@ $sysmonitor = $term -T htop  htop
 $browser = flatpak run org.mozilla.firefox
 $screenshot = grim
 $screenshot2 = slurp | grim -g - $HOME/Pictures/slurp_screenshot.png
-$wallpaper = swww-daemon
+$wallpaper = hyprpaper
 $telegram = flatpak run org.telegram.desktop
 $easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
 $polkit = /usr/lib/hyprpolkitagent
