--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -13,15 +13,15 @@ general {
 # BACKGROUND
 background {
     monitor =
-    path = $HOME/.local/share/lock.png
+    path = $HOME/.local/share/wallpaper
     color = $base
     blur_size = 3
-    blur_passes = 4 
+    blur_passes = 3 
     noise = 0.0117
     contrast = 1.3000 
-    brightness = 0.8000
+    brightness = 0.6000
     vibrancy = 0.2100
-    vibrancy_darkness = 0.4
+    vibrancy_darkness = 0.7
 }
 
 # TIME
