add keybind to reload hyprpaper

--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -18,3 +18,4 @@ $clipboard = wl-paste --watch cliphist store
 $clipboard-copy = cliphist list | $dmenu 'cliphist >' | cliphist decode | wl-copy
 $notification-action = makoctl menu $dmenu 'action >'
 $notification-dismiss = makoctl dismiss --all
+$hyprpaper-reload = killall -e hyprpaper & sleep 0.1; hyprpaper &
