use hyprpaper ipc and some other stuff

--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -8,14 +8,13 @@ $sysmonitor = $term -T htop  htop
 $browser = flatpak run org.mozilla.firefox
 $screenshot = grim
 $screenshot2 = slurp | grim -g - $HOME/Pictures/slurp_screenshot.png
-$wallpaper = hyprpaper
 $telegram = flatpak run org.telegram.desktop
 $easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
-$polkit = /usr/lib/hyprpolkitagent
+$polkit = systemctl start --user hyprpolkitagent
 $portals = sleep 1; killall xdg-desktop-portal-hyprland & killall xdg-desktop-portal & sleep 1; /usr/lib/xdg-desktop-portal-hyprland & sleep 2; /usr/lib/xdg-desktop-portal
 $mpd = mpd & killall -e mpd-notification & sleep 2; mpd-notification -H localhost -p 6600 -m $HOME/Music -s 150 -t 10
 $clipboard = wl-paste --watch cliphist store
 $clipboard-copy = cliphist list | $dmenu 'cliphist >' | cliphist decode | wl-copy
 $notification-action = makoctl menu $dmenu 'action >'
 $notification-dismiss = makoctl dismiss --all
-$hyprpaper-reload = killall -e hyprpaper & sleep 0.1; hyprpaper &
+$wallpaper = hyprctl hyprpaper reload , $HOME/.local/share/wallpaper
