--- a/.config/hypr/hyprland.conf.d/keybinds.conf
+++ b/.config/hypr/hyprland.conf.d/keybinds.conf
@@ -34,7 +34,7 @@ bind = $extraMod, A, exec, $notification-action
 bind = $mainMod, A, exec, $notification-dismiss
 bind = $mainMod, C, cyclenext
 bind = $extraMod, C, cyclenext, prev
-bind = $extraMod, R, exec, $hyprpaper-reload
+bind = $extraMod, R, exec, $wallpaper
 
 #mpd-mpc remote control
 bindl = ,XF86AudioNext, exec, mpc next
