--- a/.config/hypr/hyprland.conf.d/autostart.conf
+++ b/.config/hypr/hyprland.conf.d/autostart.conf
@@ -1,3 +1,3 @@
 exec-once = $portals &
-exec-once = foot --server & $polkit & hypridle & waybar & $wallpaper & $easyeffects & $clipboard & $mpd & 
+exec-once = foot --server & $polkit & hypridle & waybar & hyprpaper & $easyeffects & $clipboard & $mpd & 
 exec-once=[workspace 1 silent] $browser & sleep 4; $clock & sleep 1; $filemanager & $telegram &
