--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -35,7 +35,7 @@ db_file			"~/.config/mpd/database"
 # If you use systemd, do not configure a log_file.  With systemd, MPD
 # defaults to the systemd journal, which is fine.
 #
-log_file			"~/.cache/mpd_log"
+#log_file			"~/.cache/mpd_log"
 
 # This setting sets the location of the file which stores the process ID
 # for use of mpd --kill and some init scripts. This setting is disabled by
@@ -43,7 +43,7 @@ log_file			"~/.cache/mpd_log"
 #
 # If you use systemd, do not configure a pid_file.
 #
-pid_file			"~/.config/mpd/pid"
+#pid_file			"~/.config/mpd/pid"
 
 # This setting sets the location of the file which contains information about
 # most variables to get MPD back into the same general shape it was in before
