systemd goes brrr

--- a/.config/hypr/hyprland.conf.d/apps.conf
+++ b/.config/hypr/hyprland.conf.d/apps.conf
@@ -10,10 +10,14 @@ $screenshot = grim
 $screenshot2 = slurp | grim -g - $HOME/Pictures/slurp_screenshot.png
 $telegram = flatpak run org.telegram.desktop
 $easyeffects = flatpak run com.github.wwmm.easyeffects --gapplication-service
-$polkit = /usr/lib/hyprpolkitagent  
 $portals = sleep 1; killall xdg-desktop-portal-hyprland & killall xdg-desktop-portal & sleep 1; /usr/lib/xdg-desktop-portal-hyprland & sleep 2; /usr/lib/xdg-desktop-portal
 $clipboard = wl-paste --watch cliphist store
 $clipboard-copy = cliphist list | $dmenu 'cliphist >' | cliphist decode | wl-copy
 $notification-action = makoctl menu $dmenu 'action >'
 $notification-dismiss = makoctl dismiss --all
 $wallpaper = hyprctl hyprpaper reload , $HOME/.local/share/wallpaper
+
+#systemd units - defined here due to lack of graphical-session.target
+$foot-server = systemctl --user start foot-server.service
+$polkit = systemctl --user start hyprpolkitagent.service 
+$hypridle = systemctl --user start hypridle.service 
