start hyprland as a systemd unit and edit config accordingly

--- a/.config/hypr/hyprland.conf.d/autostart.conf
+++ b/.config/hypr/hyprland.conf.d/autostart.conf
@@ -1,3 +1,3 @@
 exec-once = $portals &
-exec-once = $foot-server & $polkit & $hypridle & waybar & hyprpaper & $easyeffects & $clipboard &
+exec-once = hyprpaper & $easyeffects & $clipboard &
 exec-once=[workspace 1 silent] $browser & sleep 4; $clock & sleep 1; $filemanager & $telegram &
