update local systemd services

--- a/.config/systemd/user/mpd-notification.service.d/override.conf
+++ b/.config/systemd/user/mpd-notification.service.d/override.conf
@@ -1,3 +1,6 @@
+[Unit]
+ After=dunst.service xfce4-notifyd.service mako.service
+
 [Service]
 ExecStart=
 ExecStart=/usr/bin/mpd-notification  -H localhost -p 6600 -m '${HOME}/Music' c -s 150 -t 10
