--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -19,6 +19,7 @@
 # vertical-letter-offset=0
 # underline-offset=<font metrics>
 # underline-thickness=<font underline thickness>
+# strikeout-thickness=<font strikeout thickness>
 # box-drawings-uses-font-glyphs=no
 # dpi-aware=no
 
@@ -27,6 +28,7 @@
 # initial-window-mode=windowed
 # pad=0x0                             # optionally append 'center'
 # resize-by-cells=yes
+# resize-keep-grid=yes
 # resize-delay-ms=100
 
 # bold-text-in-bright=no
@@ -117,6 +119,24 @@
 # 16 = <256-color palette #16>
 # ...
 # 255 = <256-color palette #255>
+
+## Sixel colors
+# sixel0 =  000000
+# sixel1 =  3333cc
+# sixel2 =  cc2121
+# sixel3 =  33cc33
+# sixel4 =  cc33cc
+# sixel5 =  33cccc
+# sixel6 =  cccc33
+# sixel7 =  878787
+# sixel8 =  424242
+# sixel9 =  545499
+# sixel10 = 994242
+# sixel11 = 549954
+# sixel12 = 995499
+# sixel13 = 549999
+# sixel14 = 999954
+# sixel15 = cccccc
 
 ## Misc colors
 # selection-foreground=<inverse foreground/background>
