--- a/.config/systemd/user/hyprland-session.service
+++ b/.config/systemd/user/hyprland-session.service
@@ -11,7 +11,7 @@ Upholds=waybar.service
 Type=notify
 ExecStart=/usr/bin/Hyprland
 ExecStop=/usr/bin/hyprctl dispatch exit
-ExecStopPost=/usr/bin/systemctl --user unset-environment DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE 
+ExecStopPost=/usr/bin/systemctl --user unset-environment DISPLAY WAYLAND_DISPLAY HYPRLAND_INSTANCE_SIGNATURE XDG_CURRENT_DESKTOP
 Restart=on-failure
 Slice=session.slice
 
